--- a/trabajo.html
+++ b/trabajo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UNIVERSO PELIS</title>
     <link rel="stylesheet" href="../Escritorio/style.css">
-    <link rel="shortcut icon" type="/favicon.ico" href="../Escritorio/favicon.png">
+    <link rel="shortcut icon" type="/favicon.ico" href="https://github.com/Ene1510/Universo-pelis/tree/main/fotos">
 </head>
 <body>
 	
