--- a/trabajo.html
+++ b/trabajo.html
@@ -19,7 +19,7 @@
 					<li href=""><a href="">Peliculas Premiadas</a></li>
 					<li href=""><a href="">Premios Oscar</a></li>
 					<li href=""><a href="">Proximos Estrenos</a></li>
-					<li href=""><a href="file:///C:/Users/nicoo/OneDrive/Escritorio/form.html">Iniciar Sesión</a></li>
+					<li href=""><a href="https://github.com/Ene1510/Universo-pelis/blob/main/form.html">Iniciar Sesión</a></li>
 					
 					
 				</ul>
