--- a/trabajo.html
+++ b/trabajo.html
@@ -54,7 +54,7 @@
 
 		       <div class="dos">
 
-		       <img class="thumbnail-img b-loaded" src="https://es.web.img2.acsta.net/c_215_286/pictures/24/03/19/16/21/0126005.jpg" alt="Rebel Moon - Parte 2: La guerrera que deja marcas Teaser" width="215" height="286">
+		       <img class="https://github.com/Ene1510/Universo-pelis/blob/main/fotos/rebel.jpg" alt="Rebel Moon - Parte 2: La guerrera que deja marcas Teaser" width="215" height="286">
 		             <a href="https://www.youtube.com/watch?v=UEJuNHOd8Dw" target="_blank">Rebel Moon</a>	
 	            </div>
               
