--- a/trabajo.html
+++ b/trabajo.html
@@ -65,7 +65,7 @@
 		
 	          <div  class="cuatro">
 
-	                 <img class="thumbnail-img b-loaded" src="https://es.web.img3.acsta.net/c_215_286/pictures/210/059/21005909_20130515005645694.jpg" alt="El submarino Tráiler VO" width="215" height="286">
+	                 <img class="https://github.com/Ene1510/Universo-pelis/blob/main/fotos/das.jpg" alt="El submarino Tráiler VO" width="215" height="286">
 	                  <a href="https://www.youtube.com/watch?v=KhNnU4h1Q50" target="_blank">Submarino</a>
 	          
 			  </div >	
