--- a/trabajo.html
+++ b/trabajo.html
@@ -75,7 +75,7 @@
 	            <a href="https://www.youtube.com/watch?v=ffSkX8LXzFc" target="_blank">Abigail</a>
 	         </div>
 	         <div class="seis">
-	            <img class="thumbnail-img b-loaded" src="https://es.web.img2.acsta.net/c_215_286/pictures/15/12/14/16/38/050093.jpg" alt="El renacido Tráiler " width="215" height="286">
+	            <img class="https://github.com/Ene1510/Universo-pelis/blob/main/fotos/renacido.jpg" alt="El renacido Tráiler " width="215" height="286">
 	            <a href="https://www.youtube.com/watch?v=LoebZZ8K5N0" target="_blank">Revenant</a>
             </div>
        </div>
