--- a/trabajo.html
+++ b/trabajo.html
@@ -71,7 +71,7 @@
 			  </div >	
 
 	          <div class="cinco">
-	            <img class="thumbnail-img b-loaded" src="https://es.web.img3.acsta.net/c_215_286/pictures/24/02/07/17/44/0885934.jpg" alt="Abigail Tráiler" width="215" height="286">
+	            <img class="https://github.com/Ene1510/Universo-pelis/blob/main/fotos/abi.webp" alt="Abigail Tráiler" width="215" height="286">
 	            <a href="https://www.youtube.com/watch?v=ffSkX8LXzFc" target="_blank">Abigail</a>
 	         </div>
 	         <div class="seis">
