--- a/trabajo.html
+++ b/trabajo.html
@@ -59,7 +59,7 @@
 	            </div>
               
 			 <div class="tres">
-			            <img class="thumbnail-img b-loaded" src="https://es.web.img2.acsta.net/c_215_286/pictures/15/10/23/15/24/061018.jpg" alt="Escuela de rock Tráiler VO" width="215" height="286">
+			            <img class="https://github.com/Ene1510/Universo-pelis/blob/main/fotos/escuela.jpg" alt="Escuela de rock Tráiler VO" width="215" height="286">
 		                 <a href="https://www.youtube.com/watch?v=xFPPoxTE3t8" target="_blank">Shool of Rock</a>
 	         </div>
 		
