--- a/trabajo.html
+++ b/trabajo.html
@@ -48,7 +48,7 @@
        <div class="imagen">
 
               <div class="uno">
-			       <img class="thumbnail-img b-loaded" src="https://es.web.img3.acsta.net/c_215_286/pictures/24/01/16/16/49/0609475.jpg" alt="Rivales Publicidad" width="215" height="286">          
+			       <img class="https://github.com/Ene1510/Universo-pelis/blob/main/fotos/rival.jpg" alt="Rivales Publicidad" width="215" height="286">          
 		              <a href="https://www.youtube.com/watch?v=Y6ypuA4udLQ&t=15s" target="_blank">Rivales</a>
 		      </div>
 
