--- a/trabajo.html
+++ b/trabajo.html
@@ -97,7 +97,7 @@
 	 </div>
 
 	 <div class="noti2">
-	           <img src="../Escritorio/terror.webp"  class="img2" alt="">
+	           <img src="https://github.com/Ene1510/Universo-pelis/blob/main/terror.webp"  class="img2" alt="">
 		          <a class="link2" href="https://www.sensacine.com/noticias/cine/noticia-1000076986/" target="_blank"><h4 class="hache42">Pelicula de terror que arrasa en netflix</h4></a>
 		             <p class="pa2">No tubo mucho revuelo en cines pero esta arrasando en Netflix.
 						Emma cree que en una ermita que visita asiduamente se encuentra atrapado el espíritu de una pequeña niña desde hace varios siglos. Por ello quiere comunicarse con ella para tratar de ayudarla, como ella no puede comunicarse con la niña fácilmente busca la ayuda de Carol,una medium.
