--- a/trabajo.html
+++ b/trabajo.html
@@ -11,11 +11,11 @@
 	
 	
 		<nav>
-			<h3><a href="file:///C:/Users/nicoo/OneDrive/Escritorio/trabajo.html">Universo Pelis</a></h3>
+			<h3><a href="https://github.com/Ene1510/Universo-pelis/edit/main/trabajo.html">Universo Pelis</a></h3>
 			<div class="barranav">
 				<ul>
 					
-					<li href=""><a href="file:///C:/Users/nicoo/OneDrive/Escritorio/trabajo.html">Inicio</a></li>
+					<li href=""><a href="https://github.com/Ene1510/Universo-pelis/edit/main/trabajo.html">Inicio</a></li>
 					<li href=""><a href="">Peliculas Premiadas</a></li>
 					<li href=""><a href="">Premios Oscar</a></li>
 					<li href=""><a href="">Proximos Estrenos</a></li>
@@ -125,7 +125,7 @@
 
      
 
-	<footer class="pie"><h4>Todos los derechos reservados. <a  class="final"  href="file:///C:/Users/nicoo/OneDrive/Escritorio/trabajo.html">UNIVERSO PELIS. </a> <h4></footer>
+	<footer class="pie"><h4>Todos los derechos reservados. <a  class="final"  href="https://github.com/Ene1510/Universo-pelis/edit/main/trabajo.html">UNIVERSO PELIS. </a> <h4></footer>
 	
 </body>
 
