--- a/trabajo.html
+++ b/trabajo.html
@@ -91,7 +91,7 @@
 		
 
 	<div class="noti1">
-		      <img src="../Escritorio/leyenda.webp" class="img1" alt="">
+		      <img src="https://github.com/Ene1510/Universo-pelis/blob/main/leyenda.webp" class="img1" alt="">
 		          <a  class="link1" href="https://www.sensacine.com/noticias/cine/noticia-1000077000/" target="_blank"><h4 class="hache4">El cartel de advertencia en 'Soy leyenda' que presagia lo que va a pasar más tarde en la película</h4></a> 
 		             <p class="pa1">No todo el mundo lo sabe, pero Soy Leyenda no era la primera película basada en el libro original de Richard Matheson de 1954: en los 60 Vincent Price fue El último hombre sobre la Tierra y en los 70 Charlton Heston fue El último hombre... vivo. </p>
 	 </div>
