--- a/trabajo.html
+++ b/trabajo.html
@@ -106,7 +106,7 @@
 
 	
 	   <div class="noti3">
-		         <img src="../Escritorio/fall.webp" class="img3" alt="">
+		         <img src="https://github.com/Ene1510/Universo-pelis/blob/main/fall.webp" class="img3" alt="">
 	                <a class="link3" href="https://www.sensacine.com/noticias/cine/noticia-1000076978/" target="_blank"><h4 class="hache45">Ryan Gosling vuelve al espacio: La película de ciencia ficción que veremos en 2 años </h4></a>
 	             <p class="pa3">El actor dará vida a un profesor convertido en astronauta con una misión muy importante.</p>
 		</div>
