--- a/trabajo.html
+++ b/trabajo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UNIVERSO PELIS</title>
-    <link rel="stylesheet" href="../Escritorio/style.css">
+    <link rel="stylesheet" href="https://github.com/Ene1510/Universo-pelis/blob/main/style.css">
     <link rel="shortcut icon" type="/favicon.ico" href="https://github.com/Ene1510/Universo-pelis/tree/main/fotos">
 </head>
 <body>
