--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Escritorio/form.css">
+    <link rel="stylesheet" href="https://github.com/Ene1510/Universo-pelis/blob/main/form.css">
     <link rel="shortcut icon" type="/favicon.ico" href="../Escritorio/favicon.png">
     <title>Inicio de sesion</title>
 </head>
