--- a/form.html
+++ b/form.html
@@ -12,7 +12,7 @@
 
 <body>
 	
-		<h3><a href="file:///C:/Users/nicoo/OneDrive/Escritorio/trabajo.html">Universo Pelis</a></h3>
+		<h3><a href="https://github.com/Ene1510/Universo-pelis/blob/main/trabajo.html">Universo Pelis</a></h3>
    
 
     <div class="login_body">
@@ -64,7 +64,7 @@
         </div>
     </div>
 
-    	<footer class="pie"><h4>Todos los derechos reservados. <a  class="final"  href="file:///C:/Users/nicoo/OneDrive/Escritorio/trabajo.html">UNIVERSO PELIS. </a> </h4> </footer>
+    	<footer class="pie"><h4>Todos los derechos reservados. <a  class="final"  href="https://github.com/Ene1510/Universo-pelis/blob/main/trabajo.html">UNIVERSO PELIS. </a> </h4> </footer>
 </body>
 
 </html>
