--- a/trabajo.html
+++ b/trabajo.html
@@ -125,7 +125,17 @@
 
      
 
-	<footer class="pie"><h4>Todos los derechos reservados. <a  class="final"  href="https://github.com/Ene1510/Universo-pelis/edit/main/trabajo.html">UNIVERSO PELIS. </a> <h4></footer>
+<footer class="pie">  
+            <ul class="lista">
+                <li><a class= "default" href="#">Centro de ayuda</a></li>
+                <li><a class= "default" href="#">Términos de uso</a></li>
+                <li><a class= "default" href="#">Preguntas frecuentes</a></li>
+                <li><a class= "default" href="#">Privacidad</a></li>
+                <li><a class= "default" href="#">Preferencias de cookies</a></li>
+                <li><a class= "default" href="#">Información corporativa</a></li>      
+            </ul>
+        <h4 class="final">© 2024 Todos los derechos reservados.<a href="file:///C:/Users/nicoo/OneDrive/Escritorio/trabajo.html"> UNIVERSO PELIS.</a><h4>
+    </footer>
 	
 </body>
 
